--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section>
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Sazzad</span> Website</h1>
+            <h1><span class="name-highlight">Sazzad's</span> Website</h1>
             <p>Hi, this is Sazzad professional Full-stack Web Developer and eCommerce specialist with couple of years experiences. My expertises are <b>html5, css3, bootstrap, javascript, react, redux, nodejs, mongodb.</b>  Smooth code management through github, excellent communication and team management skill</p>
         </div>
         <div class="half-width">
