--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name-highlight">Sazzad's</span> Website</h1>
             <p>Hi, this is Sazzad professional Full-stack Web Developer and eCommerce specialist with couple of years experiences. My expertises are <b>html5, css3, bootstrap, javascript, react, redux, nodejs, mongodb.</b>  Smooth code management through github, excellent communication and team management skill</p>
+            <br>
+            <a class="link-button"target="_blank" href="https://www.linkedin.com/in/md-sazzad-hossain-bd/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/my-image.png" alt="">
