--- a/index.html
+++ b/index.html
@@ -6,24 +6,53 @@
     <title>Sazzad Web Developer</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Sazzad's</span> Website</h1>
+            <h1><span class="orange-highlight">Sazzad's</span> Website</h1>
+            <h3>World-class professional web dev</h3>
             <p>Hi, this is Sazzad professional Full-stack Web Developer and eCommerce specialist with couple of years experiences. My expertises are <b>html5, css3, bootstrap, javascript, react, redux, nodejs, mongodb.</b>  Smooth code management through github, excellent communication and team management skill</p>
             <br>
-            <a class="link-button"target="_blank" href="https://www.linkedin.com/in/md-sazzad-hossain-bd/">HIRE ME</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-sazzad-hossain-bd/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/my-image.png" alt="">
-
         </div>
-
+   </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/my-image2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become World's No. 1 Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <br>
+            <a class="link-button"target="_blank" href="https://www.linkedin.com/in/md-sazzad-hossain-bd/">DOWNLOAD RESUME</a>
+        </div>
     </section>
-
-    </body>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack-developer" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlight">2021 - Present | Pro level Web Devloper</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+            </p>
+       </div>
+        <div id="baby-developer" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+            </p>
+        </div>
+    </section>
+    <footer>
+        <p>© Sazzad 2021, all rights reserved.</p>
+    </footer>
+  </body>
 </html>
